Di 20 monster hca dev env (#294)
* Adding .dockerignore

* updating Dagster Dockerfile so that it doesn't blow away all of /var

* first pass, WIP Dev env for HCA ingest

* next attempt - adding the tests to the env set up and a note about the name of the image created with this Dockerfile

* adding a note about the name of the image created with this Dockerfile and how that happens

* ignoring local venv

* adding docker-compose.yaml

* finished setting up dockerfile for hca-dev-env image

* Adding info about docker compose & how to run pytest

* push and tag new Composer Dev Env at PR to main

* updating to use latest official image

* Installed sbt, cloud sdk, set up the working directory, updated comments to help with building, tagging & pushing to Artifact Registry

* updated readme to include information about the new compose dev env, as well as indicating the order of operations around auth, so that sbt test will run

* Linter legit didn't like that I used the abbreviation CLI.

* adding latest tag

* installing kubectl

* updating the readme about access to the web ui & deployment docs

* Adding info to readme about the need for gcloud auth and how to work around sbt test failures

* linter natural language woes

* cleanup unused comment

* fixed spelling & updated notes about the Docker image

* Adding notes about how to update the image

* Adding information about how to deploy and how to view the Dagster dashboard

* Adding information about how to update the Docker image

* Adding a script to build and push an updated Docker image

* Notes about how to speed up connection to AR

* Putting off 3.9.12 upgrade to DI-207, updated sbt test requirements and some note about speeding up connection to AR

* fixing "repo" for the linter

* pinning to git runner using ubuntu-20.04 to get Python 3.9.6, this will be updated in DI-207

* appeasing the linter gods -r it is. https://askubuntu.com/questions/142980